--- a/CarDealership/View/MainPage.xaml
+++ b/CarDealership/View/MainPage.xaml
@@ -1,13 +1,43 @@
 ﻿<Page
-    x:Class="CarDealership.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CarDealership"
+    xmlns:local="using:CarDealership.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ViewModel="using:CarDealership.ViewModel"
+    x:Class="CarDealership.View.MainPage"
     mc:Ignorable="d">
 
+    <Page.DataContext>
+        <ViewModel:RegisterCarViewModel/>
+    </Page.DataContext>
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        
+        <Button Content="Add Car" Command="{Binding AddCar}" Width="150"/>
+        <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,100"/>
+
+        <ListView Width="350" 
+                  ItemsSource="{Binding CarCollection}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Width="350" 
+                                Background="Brown" 
+                                Orientation="Horizontal" 
+                                Height="30">
+                        <TextBlock Text="Name:" 
+                                   Width="100"/>
+                        <StackPanel Width="250" 
+                                    Background="Aqua" 
+                                    Orientation="Horizontal" 
+                                    Height="30">
+                        <TextBlock Text="{Binding Name}"/>
+                            </StackPanel>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
 
     </Grid>
 </Page>
