--- a/CarDealership/View/MainPage.xaml
+++ b/CarDealership/View/MainPage.xaml
@@ -16,7 +16,7 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         
         <Button x:Name="AddCarButton" Content="Add Car" Command="{Binding AddCar}" Width="150"/>
-        <TextBox Text="{Binding SearchTerm, Mode=TwoWay}" interfaces:BindingUtility.UpdateSourceOnChange="True" PlaceholderText="Find Car" Width="350" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+        <TextBox PlaceholderText="Find Car" Width="350" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center"/>
         
         <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,400" PlaceholderText="Name"/>
         <TextBox Text="{Binding Brand, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,325" PlaceholderText="Brand"/>
@@ -26,7 +26,7 @@
 
 
         <ListView Width="350"
-                  Height="650"
+                  Height="600"
                   ItemsSource="{Binding CarCollection}">
             <ListView.ItemTemplate>
                 <DataTemplate>
