--- a/CarDealership/View/MainPage.xaml
+++ b/CarDealership/View/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<Page
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+ 
     xmlns:local="using:CarDealership.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,16 +9,16 @@
     xmlns:interfaces="using:CarDealership.Interfaces"
     x:Class="CarDealership.View.MainPage"
     mc:Ignorable="d">
-
     <Page.DataContext>
         <ViewModel:RegisterCarViewModel/>
     </Page.DataContext>
 
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        
+
         <Button x:Name="AddCarButton" Content="Add Car" Command="{Binding AddCar}" Width="150"/>
         <TextBox PlaceholderText="Find Car" Width="350" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center"/>
-        
+
         <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,400" PlaceholderText="Name"/>
         <TextBox Text="{Binding Brand, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,325" PlaceholderText="Brand"/>
         <TextBox Text="{Binding Color, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,250" PlaceholderText="Color"/>
@@ -34,8 +35,8 @@
                                 Background="Brown"
                                 Margin="5">
                         <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Name:" Width="50"/>
-                        <TextBox Text="{Binding Name}" Width="275"/>
+                            <TextBlock Text="Name:" Width="50"/>
+                            <TextBox Text="{Binding Name}" Width="275"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Brand:" Width="50"/>
@@ -57,6 +58,12 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="1056,472,0,0" VerticalAlignment="Top"/>
+        <HyperlinkButton x:Name="Link1" NavigateUri="LoginPage.xaml" Content="home" RenderTransformOrigin="6.667,5.562" Margin="946,197,0,491" Background="#FFFF1717" Height="32" Width="175" IsTabStop="False"/>
+        <HyperlinkButton Content="" HorizontalAlignment="Left" Margin="1056,257,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="WriteButton" Content="Save" Command="{Binding Save}" HorizontalAlignment="Left" Margin="254,472,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="ReadButton" Content="Read" HorizontalAlignment="Left" Margin="272,556,0,0" VerticalAlignment="Top"/>
+
 
 
     </Grid>
