--- a/CarDealership/View/LoginPage.xaml
+++ b/CarDealership/View/LoginPage.xaml
@@ -1,25 +1,43 @@
 ﻿<Page
-    x:Class="CarDealership.View.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:CarDealership.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ViewModel="using:CarDealership.ViewModel"
+    x:Class="CarDealership.View.LoginPage"
     mc:Ignorable="d">
 
+    <Page.DataContext>
+        <ViewModel:LoginViewModel/>
+    </Page.DataContext>
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBox Width="200"
-                 Height="30"
-                 PlaceholderText="Username"
-                 HorizontalAlignment="Center"/>
-        <PasswordBox Width="200"
-                 Height="30"
-                 PlaceholderText="Password"
-                 HorizontalAlignment="Center"
-                 Margin="0,0,0,100"/>
-        <Button Content="Log In"
-                Width="100"
-                HorizontalAlignment="Center"
-                Margin="0,100,0,0"/>
+
+
+        <TextBox x:Name="Username"
+			PlaceholderText="Username"
+			Width="250"
+			Height="30"
+			HorizontalAlignment="Center"
+			Text="{Binding CurrentUser.UserName, Mode=TwoWay}"/>
+
+        <TextBox x:Name="Password"
+			PlaceholderText="Password"
+			Width="250"
+			Height="30"
+			HorizontalAlignment="Center"
+			Margin="0,100,0,0"
+			Text="{Binding CurrentUser.Password, Mode=TwoWay}"/>
+
+        <Button x:Name="Login"
+			Content="Log In"
+			Width="100"
+			Height="30"
+			HorizontalAlignment="Center"
+			Margin="0,200,0,0"
+			Command="{Binding LoginCommand}"/>
+        
+        
     </Grid>
 </Page>
