--- a/CarDealership/View/LoginPage.xaml
+++ b/CarDealership/View/LoginPage.xaml
@@ -12,9 +12,13 @@
         <ViewModel:LoginViewModel/>
     </Page.DataContext>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-
+    <Grid Background="White">
+        <Image Source="../Assets/icon_car.png"
+               Width="200"
+               Height="200"
+               HorizontalAlignment="Center"
+               Margin="0,0,0,250"/>
+        
         <TextBox x:Name="Username"
 			PlaceholderText="Username"
 			Width="250"
