--- a/CarDealership/View/RegisterCarView.xaml
+++ b/CarDealership/View/RegisterCarView.xaml
@@ -18,13 +18,16 @@
 
         <ListView x:Name="CarList"
 			Height="600"
-			ItemsSource="{Binding CarCollection}" Margin="386,205,463,-95" SelectedItem="{Binding SelectedCar}" SelectionChanged="SelChanged" SelectedIndex="{Binding Selectedindex}" Header="Cars In Stock" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True">
+			ItemsSource="{Binding CarCollection}" Margin="457,160,392,-50" SelectedItem="{Binding SelectedCar,Mode=TwoWay}" Header="Cars In Stock" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Width="350"
 						Background="Brown"
 						Margin="5">
-                        <StackPanel Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                            <Image x:Name="image" Height="150" Margin="0,0,0,0" VerticalAlignment="Top" Width="150" Source="{Binding ImagePath,Mode=TwoWay}" />
+                            <StackPanel Orientation="Vertical">
+                            <StackPanel Orientation="Horizontal">
                             <TextBlock Text="ID:" Width="50"/>
                             <TextBox Text="{Binding ID}" Width="275"/>
                         </StackPanel>
@@ -52,34 +55,39 @@
                             <TextBlock Text="Price:" Width="50"/>
                             <TextBox Text="{Binding Price}" Width="275"/>
                         </StackPanel>
-                        
+                            </StackPanel>
+
+                        </StackPanel>
 
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        
+
         <HyperlinkButton Content="" HorizontalAlignment="Left" Margin="1056,257,0,0" VerticalAlignment="Top"/>
-        <StackPanel HorizontalAlignment="Left" Height="292" Margin="151,133,0,0" VerticalAlignment="Top" Width="187">
+        <StackPanel HorizontalAlignment="Left" Height="292" Margin="250,160,0,0" VerticalAlignment="Top" Width="187">
             <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Name"/>
             <TextBox Text="{Binding Brand, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Brand"/>
             <TextBox Text="{Binding Color, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Color"/>
             <TextBox Text="{Binding Comment, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Comment"/>
             <TextBox Text="{Binding Year, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Year"/>
             <TextBox Text="{Binding Price, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Price"/>
+            <TextBox Text="{Binding ImagePath, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Image Name"/>
             <Button x:Name="AddCarButton" Content="Add Car" Command="{Binding AddCar}" Width="150"/>
         </StackPanel>
-        <StackPanel HorizontalAlignment="Left" Height="112" Margin="1020,133,0,0" VerticalAlignment="Top" Width="104">
-            <TextBlock x:Name="Carid" HorizontalAlignment="Left" TextWrapping="Wrap" Text="CarID" VerticalAlignment="Top" Width="84" Height="34"/>
-            <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding SelectedID,Mode=TwoWay}" VerticalAlignment="Top" Width="84" Height="34"/>
-            <Button x:Name="button" Content="DeleteCar" HorizontalAlignment="Left" Command="{Binding DeleteCar}" VerticalAlignment="Top"/>
+        <StackPanel HorizontalAlignment="Left" Height="112" Margin="936,247,0,0" VerticalAlignment="Top" Width="104">
+
+            <Button x:Name="button" Content="DeleteCar" HorizontalAlignment="Left" Command="{Binding DeleteCar,Mode=TwoWay}" VerticalAlignment="Top"/>
+            <Button x:Name="button2" Content="CreateInvoice" HorizontalAlignment="Stretch" Command="{Binding CreateInvoiceWithSelectedCar,Mode=TwoWay}" VerticalAlignment="Stretch"/>
         </StackPanel>
-        <StackPanel HorizontalAlignment="Right" Height="152" Margin="0,76,371,482" VerticalAlignment="Top" Width="455" Orientation="Horizontal">
+        <StackPanel HorizontalAlignment="Right" Height="64" Margin="0,71,367,0" VerticalAlignment="Top" Width="437" Orientation="Horizontal">
             <TextBox PlaceholderText="Find Car" Width="250" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}"/>
             <Button x:Name="button1" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="28" Width="100"/>
         </StackPanel>
         
-       
+        <Frame x:Name="framemenu" Content="Frame" HorizontalAlignment="Left" Height="698" Margin="6,0,0,0" VerticalAlignment="Top" Width="150"/>
+
+
 
 
     </Grid>
